ticketing/infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector: # selector and metadata section in following helps deployment find the set of pods that it supposed to manage
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: us.gcr.io/ticketing-dev-345514/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client # this name is not important on the actual port, just for logging and reporting purposes
      protocol: TCP
      port: 3000
      targetPort: 3000
