ticketing/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # help the ingress controller understand we are trying to feed it with some routing rules
    nginx.ingress.kubernetes.io/use-regex: 'true' # to allow to use regular expression in path config like /posts/?(.*)/comments
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /api/users/?(.*) # request which has the path defined will be sent to the following defined backend
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
